compiler/lyra/src/test/resources/semantic_errors/SuperOnMethod.ly
class Application {
    def main {
        out.writeln(method);
    }
    def method : String {
        super();
        return "Opa";
    }
}